--- a/AccountManagerClient/res/menu/options.xml
+++ b/AccountManagerClient/res/menu/options.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_add_food_log"
+    	android:title="@string/menu_add_food_log_label"
+    	android:icon="@android:drawable/ic_menu_add" />
     <item android:id="@+id/menu_select_account"
     	android:title="@string/menu_select_account_label"
     	android:icon="@android:drawable/ic_menu_manage" />
