--- a/trunk/AccountManagerClient/res/layout/main.xml
+++ b/trunk/AccountManagerClient/res/layout/main.xml
@@ -4,9 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<ListView android:id="@+android:id/list"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+	<ListView android:id="@+android:id/list"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="@string/hello"
+	    />
+	<TextView android:text="@string/food_log_empty_message"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+		/>		
 </LinearLayout>
