--- a/trunk/BasicLogin/res/layout/main.xml
+++ b/trunk/BasicLogin/res/layout/main.xml
@@ -51,6 +51,7 @@
 	    />
 	<TextView android:id="@+id/message_text"
 	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content" 
+	    android:layout_height="wrap_content"
+	    android:textSize="16sp"
 	    />
 </LinearLayout>
