--- a/trunk/AccountManagerClient/res/menu/options.xml
+++ b/trunk/AccountManagerClient/res/menu/options.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/menu_update"
+		android:title="@string/menu_update_label"
+		android:icon="@android:drawable/ic_menu_rotate" />
     <item android:id="@+id/menu_add_food_log"
     	android:title="@string/menu_add_food_log_label"
     	android:icon="@android:drawable/ic_menu_add" />
